--- a/app/src/main/res/drawable/button_fb.xml
+++ b/app/src/main/res/drawable/button_fb.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"   >
 
     <solid
-        android:color="@color/btn_color_round" >
+        android:color="@color/fb" >
     </solid>
 
     <corners
