--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent">
-
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,17 +16,16 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/btn_color_round">
+            android:background="@color/btn_color_round"
+            app:popupTheme="@style/AppTheme.ActionBar.Transparent.PopupOverlay">
 
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/dashboard"
+                android:text="@string/notif"
                 android:textColor="@android:color/white"
                 android:textSize="20dp" />
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
-
 </RelativeLayout>
-
